--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,9 +1,19 @@
-<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
+    TeX: {
+      equationNumbers: { autoNumber: "all" }
+    },
     tex2jax: {
       inlineMath: [ ['$','$'], ["\\(","\\)"] ],
       processEscapes: true
+    },
+    "HTML-CSS": {
+      availableFonts: ["TeX"]
+    },
+    CommonHTML: {
+      linebreaks: { automatic: true },
+      scale: 100, // Adjust scale if needed
+      preferredFont: "TeX"
     }
   });
 </script>
